--- a/styles.css
+++ b/styles.css
@@ -5,101 +5,89 @@ body{
     background-repeat: no-repeat;
     font-family: Verdana;
     font-family: 'PT Sans';
+    min-width: 200px;
 }
 
-header {
-    width: 100%;
-    background: linear-gradient(rgb(0, 0, 0), rgb(66, 66, 66), rgb(49, 49, 49));
+/*header*/
+
+#header {
+    background: linear-gradient(black, rgb(61, 61, 61), black);
 }
 
-#logoYoProgramo {
-    display: block;
-    padding-left: 20px;
-    text-align: left;
-    padding-top: 12px;
-    padding-bottom: 12px;
+#logoProgramo {
+    padding-top: 10px;
+    padding-bottom: 10px;
+
 }
 
 #redes {
     filter: invert();
     text-align: right;
-    display: inline;
-    padding-left: 2px;
-    border: 2px;
-    margin: 2px;
+    align-items: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
-.logo {
-    padding-right: 25px;
-    justify-content: center;
-    padding-top: 15px;
+#yoProgramo {
+    width: 200px;
+    min-width: 20px;
+    max-width: 200px;
+    height: auto;
 }
 
-#perfil {
-    width: 23%;
-    height: 300px;
-    min-height: 300px;
-    min-width: 250px;
-    max-width: 400px;
-    max-height: 400px;
-    margin: auto;
-    z-index: 3;
-    position: relative;
+#instagram {
+    width: 15%;
+    min-width: 60px;
+    max-width: 80px;
+    height: auto;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+#git {
+    width: 15%;
+    min-width: 60px;
+    max-width: 80px;
+    height: auto;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+#login {
+    width:15%;
+    min-width: 60px;
+    max-width: 80px;
+    height: auto; 
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+/*/header*/
+
+#espacioNavbar {
 
 }
 
-#fotoPerfil {
-    border-radius: 100%;
-    z-index: 3;
-    margin: auto;
-    margin-top: -200px;
-}
-
-#tituloPresentacion {
+#navbar {
     text-align: center;
-    color: blueviolet;
-    font-weight: 900;
-    font-size: 30px;
-    margin-bottom: 1px;
+    background-color: aliceblue;
+    margin-top: 15%;
+    padding: 15px;
+    border-radius: 15%;
 }
 
-#titulo {
-    text-align: center;
-    color: blueviolet;
-    font-weight: 900;
-    font-size: 30px;
-    margin-top: 1px;
-    text-align: center;
+#espacioContenido {
+padding-left: 10%;
+padding-right: 10%;
 }
 
 #contenido {
-    width: 100%;
-    height: auto;
-    background-color: rgb(59, 59, 59);
-    border-radius: 10%;
-    margin-top: 300px;
-    margin-bottom: 20px;
-    padding: auto;
-    padding-bottom: 30px;
-    z-index: 2;
-    position: relative;
     text-align: center;
-}
-
-#parrafoSobreMi {
-    padding: 10%;
-}
-
-#nombre {
-    font-size: 7vw;
-    color: yellow;
-    margin: auto;
-    margin-top: -100px;
-    text-align: center;
-}
-
-#sobreMi {
+    width: auto;
+    background-color: rgb(41, 41, 41);
     color: aliceblue;
-    font-size: 20px;
-    margin: auto;
+    border-radius: 20%;
+    padding-bottom: 15px ;
+    margin-top: 50px;
+    max-width: fit-content;
 }
