--- a/styles.css
+++ b/styles.css
@@ -64,10 +64,6 @@ body{
 
 /*/header*/
 
-#espacioNavbar {
-
-}
-
 #navbar {
     text-align: center;
     background-color: aliceblue;
@@ -88,6 +84,10 @@ padding-right: 10%;
     color: aliceblue;
     border-radius: 20%;
     padding-bottom: 15px ;
-    margin-top: 50px;
+    margin-top: 400px;
     max-width: fit-content;
+}
+
+#lista-desplegable {
+    display: none;
 }
