--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,9 @@ body{
 
 #header {
     background: linear-gradient(black, rgb(61, 61, 61), black);
+    position: fixed;
+    width: 100%;
+    top: 0px;
 }
 
 #logoProgramo {
@@ -64,30 +67,107 @@ body{
 
 /*/header*/
 
-#navbar {
-    text-align: center;
-    background-color: aliceblue;
-    margin-top: 15%;
-    padding: 15px;
-    border-radius: 15%;
-}
-
-#espacioContenido {
-padding-left: 10%;
-padding-right: 10%;
-}
-
-#contenido {
-    text-align: center;
-    width: auto;
-    background-color: rgb(41, 41, 41);
-    color: aliceblue;
-    border-radius: 20%;
-    padding-bottom: 15px ;
-    margin-top: 400px;
-    max-width: fit-content;
-}
-
 #lista-desplegable {
     display: none;
 }
+
+#checkPc {
+    display: none;
+}
+
+
+#barraDesplegable {
+    background-color: rgb(122, 37, 235);
+    color: aliceblue;
+    position: fixed;
+    bottom: 1%;
+    right: 1%;
+    padding: 1%;
+    border-radius: 10%;
+    right: -130px;
+}
+
+#barraDesplegable:hover {
+  right: 0px;
+}
+
+#ayuda {
+    max-width: 150px;
+    max-height: 150px;
+}
+
+#pc {
+    width: 100%;   
+}
+
+#presentacion1 {
+    margin: auto;
+    padding: auto;
+    background-color: aliceblue;
+}
+
+#presentacion {
+    text-align: center;
+    width: 80%;
+    height: auto;
+    min-height: 500px;
+    background-color: rgb(41, 41, 41);
+    color: aliceblue;
+    border-radius: 10%;
+    padding-bottom: 15px ;
+    margin: auto;
+    margin-top: 20%;
+    padding: 1%;  
+}  
+
+#fotoPerfil {
+    width: 100%;
+    min-width: 150px;
+    border-radius: 50%;
+    object-fit: cover; 
+}
+
+#nombre {
+    padding: 1%;
+}
+  
+#texto {
+    font-size: clamp(20px, 2vw, 40px);
+}
+
+#nombreTitulo {
+    color: yellow;
+    font-size: clamp(25px, 4vw, 80px);
+}
+
+#carrera {
+    color: blueviolet;
+    font-size: clamp(25px, 3vw, 80px);
+}
+
+#superiorPresentacion {
+    padding-top: 3% ;
+}
+
+/*experiencia*/
+
+#experiencia {
+    text-align: center;
+    width: 80%;
+    height: auto;
+    min-height: 500px;
+    background-color: rgb(41, 41, 41);
+    color: aliceblue;
+    border-radius: 10%;
+    padding-bottom: 15px ;
+    margin-top: 3%;
+    padding: 1%;
+}
+
+#top {
+}
+
+#logoSuperTop {
+    height: 150px;
+}
+
